@@ -1,7 +1,9 @@
 package com.group16b.ApplicationLayer;
 
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
@@ -15,10 +17,9 @@ import com.group16b.DomainLayer.Event.IEventRepository;
 import com.group16b.DomainLayer.Order.IOrderRepository;
 import com.group16b.DomainLayer.Order.Order;
 import com.group16b.DomainLayer.User.IUserRepository;
-import com.group16b.DomainLayer.User.Roles.Manager;
-import com.group16b.DomainLayer.User.Roles.ManagerPermissions;
-import com.group16b.DomainLayer.User.Roles.Owner;
-import com.group16b.DomainLayer.User.Roles.Role;
+import com.group16b.DomainLayer.ProductionCompany.IProductionCompanyRepository;
+import com.group16b.DomainLayer.ProductionCompany.ProductionCompany;
+import com.group16b.DomainLayer.ProductionCompany.membership.ManagerPermissions;
 import com.group16b.DomainLayer.User.User;
 import com.group16b.InfrastructureLayer.MapDBs.EventRepositoryMapImpl;
 import com.group16b.InfrastructureLayer.MapDBs.OrderRepositoryMapImpl;
@@ -32,14 +33,15 @@ public class ProductionCompanyService {
     private final IOrderRepository orderRepo = OrderRepositoryMapImpl.getInstance();
     private final IEventRepository eventRepo = EventRepositoryMapImpl.getInstance();
     private final IUserRepository userRepo = UserRepositoryMapImpl.getInstance();
+    private final IProductionCompanyRepository productionRepo;
 	private final IAuthenticationService authenticationService;
 
-    public ProductionCompanyService(IAuthenticationService authenticationService) {
+    public ProductionCompanyService(IAuthenticationService authenticationService, IProductionCompanyRepository productionRepo) {
         this.authenticationService = authenticationService;
+        this.productionRepo=productionRepo;
     }
 
     public Result<List<OrderDTO>> viewSalesHistory(String sTocken, int productionCompanyID){
-
     try {
             logger.info("ProductionCompanyService.viewSalesHistory: Retrieving sales history for specific company");
 
@@ -52,25 +54,22 @@ public class ProductionCompanyService {
                 logger.error("ProductionCompanyService.viewSalesHistory: Unauthorized access attempt by non-production company user");
                 return Result.makeFail("Unauthorized access");
             }
-            User user = userRepo.getUserByID(Integer.valueOf((authenticationService.extractSubjectFromToken(sTocken))));
+           int userID=Integer.parseInt(authenticationService.extractSubjectFromToken(sTocken));
+		    User user = userRepo.getUserByID(userID);
 
-            user.validatePermissions(productionCompanyID, ManagerPermissions.VIEW_PURCHASE_HISTORY);
+            ProductionCompany company=productionRepo.findByID(String.valueOf(productionCompanyID));
+
+            company.validateUserPermissions(userID, ManagerPermissions.VIEW_PURCHASE_HISTORY);
 
             List<Order> orders = orderRepo.getAllCompletedOrders();
-            for (Order order : orders) {
+            List<Order> filtered = orders.stream()
+            .filter(order -> {
                 Event event = eventRepo.getEventByID(order.getEventId());
-                if (event == null) {
-                    logger.warn("ProductionCompanyService.viewSalesHistory: Event with ID {} not found for order {}", order.getEventId(), order.getOrderId());
-                    orders.remove(order);
-                    continue; 
-                }
-                if (event.getEventProductionCompanyID() != productionCompanyID) {
-                    orders.remove(order);
-                }
-            }
-            List<OrderDTO> orderDTOs = orders.stream()
-                    .map(order -> new OrderDTO(order))
-                    .collect(Collectors.toList());
+                return event != null && event.getEventProductionCompanyID() == productionCompanyID;
+                }).toList();
+            List<OrderDTO> orderDTOs =filtered.stream()
+                .map(OrderDTO::new)
+                .collect(Collectors.toList());
             return Result.makeOk(orderDTOs);
         } catch (IllegalArgumentException e) {
             logger.error("ProductionCompanyService.viewSalesHistory: Permission error while retrieving sales history", e);
@@ -81,79 +80,69 @@ public class ProductionCompanyService {
         }
     }
 
-    public Result<Integer> displayTotalRevenue(String sTocken, int productionCompanyID) {
-        
-        // validate user
+    public Result<Double> displayTotalRevenue(String sToken, int productionCompanyID) {
         try {
-            logger.info("ProductionCompanyService.displayTotalRevenue: Calculating total revenue for production company");
+            logger.info(
+                "ProductionCompanyService.displayTotalRevenue: Calculating total revenue for company {}",
+                productionCompanyID
+            );
 
-            // validate production company token (this is a placeholder, implement actual validation logic)
-            if (!authenticationService.validateToken(sTocken)  ) {
-                logger.error("ProductionCompanyService.displayTotalRevenue: Invalid token");
+            // validate token
+            if (!authenticationService.validateToken(sToken)) {
+                logger.error("Invalid token");
                 return Result.makeFail("Invalid token");
             }
-            if (!authenticationService.isUserToken(sTocken)) {
-                logger.error("ProductionCompanyService.displayTotalRevenue: Unauthorized access attempt by non-production company user");
+
+            if (!authenticationService.isUserToken(sToken)) {
+                logger.error("Unauthorized access attempt");
                 return Result.makeFail("Unauthorized access");
             }
-            User user = userRepo.getUserByID(Integer.valueOf((authenticationService.extractSubjectFromToken(sTocken))));
-            if (user == null) {
-                logger.error("ProductionCompanyService.displayTotalRevenue: User not found for token");
-                return Result.makeFail("User not found");
+
+            int userID = Integer.parseInt(
+                    authenticationService.extractSubjectFromToken(sToken)
+            );
+
+            ProductionCompany company =
+                    productionRepo.findByID(String.valueOf(productionCompanyID));
+
+            if (company == null) {
+                logger.error("Production company {} not found", productionCompanyID);
+                return Result.makeFail("Production company not found");
             }
-            user.validatePermissions(productionCompanyID, ManagerPermissions.SALES_REPORT);
-            
-            // if user is managaer. look for his father and call the recursion
-            Role userRole = user.getRole(productionCompanyID);
-            if (userRole instanceof Manager manager){
-                int ownerId = manager.getAssignerID();
-                User parentUser = userRepo.getUserByID(ownerId);
-                Role parentRole = parentUser.getRole(productionCompanyID);
-                if (!(parentRole instanceof Owner)) {
-                    logger.error("ProductionCompanyService.displayTotalRevenue: Parent user with ID {} is not an owner", parentUser.getUserID());
-                    return Result.makeFail("Parent user is not an owner");
-                }
-                int totalRevenue = getAllrevinue(user.getUserID(), productionCompanyID, 0);
-                return Result.makeOk(totalRevenue);
-            }
-            // if user is owner/founder, call the recursion directly
-            else if (userRole instanceof Owner) {
-                int totalRevenue = getAllrevinue(user.getUserID(), productionCompanyID, 0);
-                return Result.makeOk(totalRevenue);
-            }
-            else{
-                logger.error("ProductionCompanyService.displayTotalRevenue: User with ID {} does not have a valid role for revenue calculation", user.getUserID());
-                return Result.makeFail("User does not have a valid role for revenue calculation");
-            }
-            
+
+            // validate permission through company
+            company.validateUserPermissions(
+                    userID,
+                    ManagerPermissions.SALES_REPORT
+            );
+
+            double totalRevenue = getAllRevenue(company, userID);
+
+            return Result.makeOk(totalRevenue);
+
         } catch (Exception e) {
-            logger.error("ProductionCompanyService.displayTotalRevenue: An unexpected error occurred while calculating total revenue", e);
-            return Result.makeFail("An unexpected error occurred: " + e.getMessage());
-        
+            logger.error(
+                "ProductionCompanyService.displayTotalRevenue: Unexpected error",
+                e
+            );
+
+            return Result.makeFail(
+                "An unexpected error occurred: " + e.getMessage()
+            );
         }
     }
 
-    private int getAllrevinue(int userId, int productionCompanyID, int totalRevenue) {
-        List<Order> userOrders = orderRepo.getAllCompletedOrders();
-            userOrders = userOrders.stream()
-                    .filter(order -> order.isBelongsToSubject(userId + ""))
-                    .collect(Collectors.toList());
-        for (Order order : userOrders) {
-                totalRevenue += order.getTotalOrderprice();
-        }
-
-        Role userRole = userRepo.getUserByID(userId).getRole(productionCompanyID);
-        if (userRole instanceof Owner owner){
-            List<Manager> managers = owner.getAssignedManagers();
-            if (managers == null || managers.isEmpty()) {
-                return totalRevenue;
-            }
-            for (Manager manager : managers) {
-                totalRevenue = getAllrevinue(manager.getUserID(), productionCompanyID, totalRevenue);
-            }
-        }
-
-        return totalRevenue;
+    private double getAllRevenue(ProductionCompany company, int userID) 
+    {
+        Set<Integer> relevantUsers = new HashSet<>(company.getAllSubordinates(userID));
+        relevantUsers.add(userID);
+        return orderRepo.getAllCompletedOrders()
+        .stream()
+        .filter(order ->
+                relevantUsers.contains(
+                        Integer.parseInt(order.getSubjectId())))
+        .mapToDouble(Order::getTotalOrderprice)
+        .sum();
     }
 
 }
